  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

xx082004 (v2.3.4)  -** stable release **-
	- fixed: multitrack offset was calculated incorrectly for
		 ALSA devices which limit buffer period count to 2
05052004 (v2.3.3)  -** stable release **-
	- note: verified to compile ok with gcc-3.4
	- added: eiam - 'map-ladspa-id-list' command
	- added: special-case value of '-1' to 'cs-set-length' or
		 '-t:xxx' will set the chainsetup length according
		 to the longest input object
	- added: ECI guide - a new section on ecasound.el [mlang]
	- added: ecasoundrc - a new special-case value 'autodetect' to 
		 the 'default-output' setting; 'autodetect' is also 
		 the new default ecasoundrc value; see ecasoundrc(5)
		 for details
	- changed: lots of typo fixes and other corrections to 
	           the user's guide [ericdr]
	- changed: minor configure.in cleanup relating to handling
		   CFLAGS, CXXFLAGS and LDFLAGS
	- fixed: building against libsndfile-1.0.4 and older; if 
		 libsndfile older than 1.0.0 is detected, sndfile 
		 support is disabled altogether
	- fixed: bug in ECI C impl that could cause segfaults [mewe]
	- fixed: signal handling bugs in ecasignalview and ECI C
	         impl [mewe]
	- fixed: bug in ecasound(1) caused man to not show the
		 last three pages
	- fixed: bug in the daemon-mode (NetECI) protocol parser
		 that caused parsing long (over 32 chars) commands 
		 to fail
	- fixed: 'libecasound-config --libs' did not list all 
		 external libraries used
	- fixed: assign default param-names to effect presets 
	- fixed: preset parameters were not saved by 'cs-save' and
		 'cs-save-as'
06122003 (v2.3.2)  -** stable release **-
	- edi-entries: edi-33 closed